initial angular json

--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,9 @@
             "scripts": []
           },
           "configurations": {
+            "github-pages": {
+              "baseHref": "/dist/"
+            },
             "production": {
               "budgets": [
                 {
