--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/geojson": "^7946.0.10",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
+    "angular-cli-ghpages": "^0.6.2",
     "csv-parse": "^5.4.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
